Adaugat document de evaluare + Camera (WIP)

--- a/textRecg/app/src/main/res/layout/activity_main.xml
+++ b/textRecg/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="15dp">
-
-    <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_centerHorizontal="true"/>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="MainActivity">
 
     <LinearLayout
             android:id="@+id/actionContainer"
@@ -19,38 +14,21 @@
             android:layout_below="@+id/imageView"
             android:orientation="horizontal">
 
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Select Image"
-                android:onClick="selectImage"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Camera"
+        tools:ignore="HardcodedText" />
 
-        <Button
-            android:id="@+id/firebase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="startRecognizing"
-            android:text="OCR Firebase" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OCR"
+        tools:ignore="HardcodedText" />
 
-        <Button
-            android:id="@+id/tesarract"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="startRecognizing"
-            android:text="OCR Tesarrect" />
-    </LinearLayout>
+     </LinearLayout>
 
-
-    <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/actionContainer"
-            android:background="@android:color/transparent"
-            android:gravity="top"
-            android:inputType="textMultiLine"
-            android:padding="10dp"
-            android:hint="Textul din poza va aparea aici."/>
 
 </RelativeLayout>
